[package]
name = "nfv_mls_conf"
version = "0.1.0"
authors = ["Joe Billingsley <jb@josephbillingsley.co.uk>"]
edition = "2018"

[dependencies]
config = "0.9"
rand = "0.7.3"
chrono = "0.4"
rayon = "1.5.0"
rand_distr = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
num_cpus = "1.0"